# machine-learning-rentsense

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
service/: api.py
src/rentsense/: artifacts.py  cli.py  config.py  eda.py  importance.py  io.py  metrics.py  models.py  preprocess.py  scoring.py  split.py
tests/: test_metrics.py
