[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rentsense"
version = "0.1.0"
description = "RentSense — прогноз аренды и поиск переоценённых/недооценённых объявлений"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Radmir" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "matplotlib>=3.7",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "streamlit>=1.32",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "prometheus-client>=0.20",
]

[project.scripts]
rentsense = "rentsense.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
